2011-10-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	dist: separate auxiliary file instantiation from DIST_COMMON update
	This change simplifies the automake internals dealing with the
	checking, copying and distributing of required auxiliary files.
	With this change, a required auxiliary file is *unconditionally*
	added to the contents of the DIST_COMMON variable in the generated
	Makefile.in, before checking whether it exists, or trying to copy
	it (if `--add-missing' is in use).  This shouldn't be a problem,
	since if the checking or copying of the file fails, automake will
	bail out, the Makefile.in won't be created, and thus its content
	will not matter.  OK, this is not completely true when threaded
	automake is in use, but then, such a situation was also possible
	before this patch, so no regression here, which is enough for us.
	This change is the first of a series of steps aimed at fixing
	the regression introduced in threaded automake usage by commit
	`v1.11-1219-g326ecba'.
	* automake.in (require_file_internal): Add the required file to
	DIST_COMMON unconditionally.
	* tests/missing-auxfile-stops-makefiles-creation.test: New test.
	* tests/Makefile.am (TESTS): Add it.

2011-10-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	refactor: rename a subroutine to a more proper name
	* automake.in (maybe_push_require_file): Renamed ...
	(push_required_file): ... to this.
	All callers adjusted.

2011-10-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	dist: truly always distribute files in AC_REQUIRE_AUX_FILE
	This change fixes automake bug#9651.
	* automake.in (handle_dist): Files whose distribution is required
	by configure.ac are now correctly distributed even if the build-aux
	directory coincides with the top-level directory.
	* tests/Makefile.am (XFAIL_TESTS): Remove `dist-auxfile.test'.
	* NEWS: Update.

2011-10-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	dist: simplify automake code accordingly to the previous changes